feat:add method for rentabbok;get list rented book with revenue;update mock,docs;
