# internal/model/transaction.go
@@ -7,5 +7,10 @@ type Transaction struct {
 	Sum       float64 `gorm:"not null" json:"sum"`
 	UserID    uint    `gorm:"not null" json:"userID"`
 	BookID    uint    `gorm:"not null" json:"bookID"`
+	Duration  uint    `gorm:"not null"`
 	CreatedAt time.Time
+}
+
+type RentDuration struct {
+	Duration uint `json:"duration"`
 }
